search route is working, checked with postman
